# RIXS-utils

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/rixs_utils/: graze_rixs.py  helper_functions.py  main_rixs_script.py  mev_rixs.py  rixs.py  test_nb.ipynb  xas.py
src/rixs_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
