[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rixs-utils"
version = "0.1.8"
description = "Shared utilities for RIXS projects"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10",
    "numba>=0.63",
    "numpy>=2.4",
    "scipy>=1.17"
]
